[project]
name = "playlist-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "rich>=14.0.0",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
]
